--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,6 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  "plugins": ["transform-vue-jsx", "transform-runtime", "transform-remove-strict-mode"],
+  "ignore":[ "./src/assets/mui/js/mui.min.js"]
 }
